--- a/installer/roles/local_docker/templates/awx-web.service.j2
+++ b/installer/roles/local_docker/templates/awx-web.service.j2
@@ -41,6 +41,9 @@ ExecStart=/usr/bin/docker run \
 {% endfor %}
     {{ awx_web_docker_actual_image }}
 
+{% for action in awx_web_post_actions | default([]) %}
+ExecStartPost={{ action }}
+{% endfor %}
 ExecStop=/usr/bin/docker stop -t 3 awx_{{ item }}
 TimeoutStopSec=15
 TimeoutStartSec=180
